 2010-09-08 18:05  dimitr 
   M src/jrd/recsrc/HashJoin.cpp
Corrections to the multi-key hashing. Thanks to Adriano.

 2010-09-07 16:17  asfernandes 
   M src/dsql/ExprNodes.cpp
Misc

 2010-09-04 21:36  asfernandes 
   M builds/posix/make.shared.variables
   M builds/win32/msvc10/dsql_server.vcxproj
   M builds/win32/msvc10/dsql_server.vcxproj.filters
   M builds/win32/msvc10/dsql_server_classic.vcxproj
   M builds/win32/msvc10/dsql_server_classic.vcxproj.filters
   M builds/win32/msvc10/engine.vcxproj
   M builds/win32/msvc10/engine.vcxproj.filters
   M builds/win32/msvc10/engine_classic.vcxproj
   M builds/win32/msvc10/engine_classic.vcxproj.filters
   M builds/win32/msvc10/engine_embed.vcxproj
   M builds/win32/msvc10/engine_embed.vcxproj.filters
   M builds/win32/msvc9/dsql_server.vcproj
   M builds/win32/msvc9/dsql_server_classic.vcproj
   M builds/win32/msvc9/engine.vcproj
   M builds/win32/msvc9/engine_classic.vcproj
   M builds/win32/msvc9/engine_embed.vcproj
   M src/dsql/AggNodes.cpp
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
   M src/dsql/Nodes.h
   M src/dsql/Visitors.h
   M src/dsql/gen.cpp
   M src/dsql/gen_proto.h
   M src/dsql/make.cpp
   D src/dsql/misc_func.cpp
   D src/dsql/misc_func.h
   M src/dsql/node.h
   M src/dsql/parse.y
   M src/dsql/pass1.cpp
   M src/gpre/cme.cpp
   M src/jrd/Optimizer.cpp
   M src/jrd/cmp.cpp
   M src/jrd/evl.cpp
   M src/jrd/evl_proto.h
   M src/jrd/exe.h
   D src/jrd/misc_func_ids.h
   M src/jrd/nod.h
   M src/jrd/opt.cpp
   M src/jrd/par.cpp
   M src/misc/blrtable.cpp
Refactor a number of expression nodes: nod_add, nod_divide, nod_multiply, nod_negate, nod_user_name, nod_subtract, nod_current_date, nod_current_time, nod_current_timestamp, nod_add2, nod_subtract2, nod_multiply2, nod_divide2, nod_current_role, nod_internal_info

 2010-09-01 15:55  asfernandes 
   M src/jrd/trig.h
Fixed CORE-3101 - Cannot alter the domain after migrating from older versions

 2010-09-01 15:54  asfernandes 
   M src/jrd/jrd.h