@@ -1,3 +1,15 @@
+ 2010-09-10 01:59  asfernandes 
+   M doc/sql.extensions/README.update_or_insert
+Fixed doc. mismatch reported by Paul Vinkenoog
+
+ 2010-09-09 10:52  alexpeshkoff 
+   M src/misc/src_bundle.sh
+Make it cvs/svn independent
+
+ 2010-09-09 10:16  alexpeshkoff 
+   M src/misc/writeBuildNum.sh
+Fixed package version generation for release builds
+
  2010-09-08 18:05  dimitr 
    M src/jrd/recsrc/HashJoin.cpp
 Corrections to the multi-key hashing. Thanks to Adriano.
